part1/exer1.11/log-output/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exer1-11-log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exer1-11-log-output
  template:
    metadata:
      labels:
        app: exer1-11-log-output
    spec:
      volumes: # Define volume
      - name: shared-log-files
        persistentVolumeClaim:
          claimName: pv-claim
      containers:
      - name: exer1-11-log-output-reader
        image: numbers00/exer1-11-reader
        volumeMounts: # Mount volume
        - name: shared-log-files
          mountPath: /usr/src/app/files
      - name: exer1-11-log-output-writer
        image: numbers00/exer1-11-writer
        volumeMounts: # Mount volume
        - name: shared-log-files
          mountPath: /usr/src/app/files
